fix spacing issue

--- a/app/assets/stylesheets/jumbotron.scss
+++ b/app/assets/stylesheets/jumbotron.scss
@@ -5,7 +5,7 @@
       rgba(32, 195, 255, 0.6)
     ),
     url(flag.jpg);
-  margin-bottom: 10em;
+  margin-bottom: 10%;
   background-size: cover;
   background-position: center;
 }
